--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 annotated-types==0.7.0
 anyio==4.8.0
 beautifulsoup4==4.13.3
+blinker==1.9.0
 cachetools==5.5.2
 certifi==2025.1.31
 charset-normalizer==3.4.1
+click==8.1.8
+decorator==5.2.1
 filelock==3.18.0
+Flask==3.1.0
 fsspec==2025.3.0
 google==3.0.0
 google-ai-generativelanguage==0.6.15
@@ -22,14 +26,19 @@ httpcore==1.0.7
 httplib2==0.22.0
 httpx==0.28.1
 idna==3.10
+imageio==2.37.0
+imageio-ffmpeg==0.6.0
+itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+moviepy==2.1.2
 mpmath==1.3.0
 networkx==3.4.2
 numpy==2.2.3
 oauthlib==3.2.2
 packaging==24.2
-pillow==11.1.0
+pillow==10.4.0
+proglog==0.1.10
 proto-plus==1.26.1
 protobuf==5.29.3
 pyasn1==0.6.1
@@ -37,6 +46,7 @@ pyasn1_modules==0.4.1
 pydantic==2.10.6
 pydantic_core==2.27.2
 pyparsing==3.2.1
+python-dotenv==1.0.1
 PyYAML==6.0.2
 requests==2.32.3
 requests-oauthlib==2.0.0
@@ -52,3 +62,4 @@ typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.3.0
 websockets==14.2
+Werkzeug==3.1.3
